chi/org.eclipse.escet.chi.tests/tests/spec/expr/proc-run-arg-count.compile.out
Error: File "spec/expr/proc-run-arg-count.chi": Semantic error at line 19, column 10: Number of arguments does not match (expected 2, found 1).
