chi/org.eclipse.escet.chi.tests/tests/spec/expr/proc-run-arg-count.chi
################################################################################
# Copyright (c) 2010, 2020 Contributors to the Eclipse Foundation
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the terms
# of the MIT License which is available at https://opensource.org/licenses/MIT
#
# SPDX-License-Identifier: MIT
#################################################################################

proc P(int x; int y):
    delay x;
    delay y;
end

model M():
    run P(1)
end
